# ai-labs

./: .gitignore  README.md  pyproject.toml
ai_labs/lab1/: task1.py  task2.py  task3.py
ai_labs/lab2/: task1.py  task2.py  task3.py  task4.py
ai_labs/lab3/: task1.py  task2.py
ai_labs/lab4/: alphabet.csv  create_alphabet.py  task1.py
ai_labs/lab5/: digits.py  task1.py  task2.py
labs_text/: Lab_1_2.m
labs_text/lab2/: McCulloch_Pitts_OR.m
labs_text/lab5/: change_digits_example.m
reports/: Стадник_ПИН-43_ЛР4.docx  Стадник_ПИН-43_ЛР5.docx  Стадник_ПИН_43_ЛР1.docx  Стадник_ПИН_43_ЛР2.docx  Стадник_ПИН_43_ЛР3.docx
