[tool.poetry]
name = "ai-labs"
version = "0.1.0"
description = ""
authors = ["Aleksandr <36007931+7StaSH7@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ai_labs"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
matplotlib = "^3.6.3"
black = "^23.1.0"

[tool.poetry.scripts]
lab1_task1 = "ai_labs.lab1.task1:main"
lab1_task2 = "ai_labs.lab1.task2:main"
lab1_task3 = "ai_labs.lab1.task3:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
