[tool.poetry]
name = "ai-labs"
version = "0.1.0"
description = ""
authors = ["Aleksandr <36007931+7StaSH7@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ai_labs"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
matplotlib = "^3.6.3"
black = "^23.1.0"
neurolab = "^0.3.5"
scikit-learn = "^1.2.2"

[tool.poetry.scripts]
lab1_task1 = "ai_labs.lab1.task1:main"
lab1_task2 = "ai_labs.lab1.task2:main"
lab1_task3 = "ai_labs.lab1.task3:main"

lab2_task1 = "ai_labs.lab2.task1:main"
lab2_task2 = "ai_labs.lab2.task2:main"
lab2_task3 = "ai_labs.lab2.task3:main"
lab2_task4 = "ai_labs.lab2.task4:main"

lab3_task1 = "ai_labs.lab3.task1:main"
lab3_task2 = "ai_labs.lab3.task2:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
